--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Container from "../components/Container.astro";
+import { Hero } from "../components/Hero";
 ---
 
 <Layout>
-  <Container>
-
-  </Container>
+  <!-- <Container> -->
+    <Hero client:load />
+  <!-- </Container> -->
 </Layout>
