--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,6 +73,15 @@ html {
       opacity: 0.4;
     }
   }
+
+  --animate-scroll: scroll var(--animation-duration, 40s)
+    var(--animation-direction, forwards) linear infinite;
+
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
 }
 
 :root {
