feat: add bg on projecy & enhance private terms page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import { ProjectsPage } from "../components/ProjectsPage";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+import { cn } from "@/lib/utils";
 
 // Fetch all projects from the content collection
 const allProjects = await getCollection("projects");
@@ -26,13 +27,24 @@ const projectsData = allProjects.map((project) => ({
 ---
 
 <Layout title="Projects | M. Anjasfedo Afridiansah">
-  <div class="relative min-h-screen w-full flex items-center justify-center bg-white dark:bg-black overflow-hidden">
+  <div
+    class="relative min-h-screen w-full flex items-center justify-center bg-white dark:bg-black overflow-hidden"
+  >
     {/* Dotted Background */}
     <div
-      class="absolute inset-0 [background-size:20px_20px] [background-image:radial-gradient(#d4d4d4_1px,transparent_1px)] dark:[background-image:radial-gradient(#404040_1px,transparent_1px)]"
-    />
+      className={cn(
+        "absolute inset-0",
+        "[background-size:40px_40px]",
+        "[background-image:linear-gradient(to_right,#e4e4e7_1px,transparent_1px),linear-gradient(to_bottom,#e4e4e7_1px,transparent_1px)]",
+        "dark:[background-image:linear-gradient(to_right,#262626_1px,transparent_1px),linear-gradient(to_bottom,#262626_1px,transparent_1px)]"
+      )}
+    >
+    </div>
     {/* Radial gradient for the container to give a faded look */}
-    <div class="pointer-events-none absolute inset-0 flex items-center justify-center bg-white [mask-image:radial-gradient(ellipse_at_center,transparent_20%,black)] dark:bg-black"></div>
+    <div
+      class="pointer-events-none absolute inset-0 flex items-center justify-center bg-white [mask-image:radial-gradient(ellipse_at_center,transparent_20%,black)] dark:bg-black"
+    >
+    </div>
 
     <div class="relative z-10 w-full">
       <ProjectsPage client:load projects={projectsData} />
