feat: fix footer lamp mobile view

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,7 +28,7 @@ const projectsData = allProjects.map((project) => ({
 
 <Layout title="Projects | M. Anjasfedo Afridiansah">
   <div
-    class="relative min-h-screen w-full flex items-center justify-center bg-white dark:bg-black overflow-hidden"
+    class="relative min-h-screen w-full flex items-center justify-center bg-white dark:bg-neutral-950 transition-colors duration-300 overflow-hidden"
   >
     {/* Dotted Background */}
     <div
@@ -42,7 +42,7 @@ const projectsData = allProjects.map((project) => ({
     </div>
     {/* Radial gradient for the container to give a faded look */}
     <div
-      class="pointer-events-none absolute inset-0 flex items-center justify-center bg-white [mask-image:radial-gradient(ellipse_at_center,transparent_20%,black)] dark:bg-black"
+      class="pointer-events-none absolute inset-0 flex items-center justify-center bg-white [mask-image:radial-gradient(ellipse_at_center,transparent_20%,black)] dark:bg-neutral-950 transition-colors duration-300"
     >
     </div>
 
