feat: clean up the code

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 import "../styles/global.css";
 // Import the WRAPPER, not the generic UI component
-import { FloatingDockWrapper } from "../components/floating-dock-wrapper";
-import { Footer } from "../components/Footer";
-import { ThemeLanguageToggle } from "../components/theme-language-toggle";
+import { FloatingDockWrapper } from "../components/shared/floating-dock-wrapper";
+import { Footer } from "../components/shared/footer";
+import { ThemeLanguageToggle } from "../components/shared/theme-language-toggle";
 ---
 
 <!doctype html>
