--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Hero } from "../components/Hero";
-import { IdentityGrid } from "../components/IdentityGrid";
-import { ProjectsGrid } from "../components/ProjectsGrid";
-import { ExperienceTimeline } from "../components/ExperienceTimeline";
-import { ServicesSection } from "../components/ServicesSection";
+import { Hero } from "../components/index-page/hero";
+import { IdentityGrid } from "../components/index-page/identity-grid";
+import { ExperienceTimeline } from "../components/index-page/experience-timeline";
+import { ServicesSection } from "../components/index-page/services-section";
 ---
 
 <Layout>
