--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { PrivacyPage } from "../components/PrivacyPage";
+import { PrivacyPage } from "../components/privacy-page/privacy-page";
 ---
 
 <Layout title="Privacy Policy | M. Anjasfedo Afridiansah">
