--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { TermsPage } from "../components/TermsPage";
+import { TermsPage } from "../components/terms-page/terms-page";
 ---
 
 <Layout title="Terms of Service | M. Anjasfedo Afridiansah">
