--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { UsesPage } from "../components/UsesPage";
+import { UsesPage } from "../components/uses-page/uses-page";
 ---
 
 <Layout title="Uses | M. Anjasfedo Afridiansah">
