--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,21 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { ProjectsPage } from "../components/projects-page/projects-page";
+import type {
+  ProjectStatus,
+  ProjectTag,
+} from "../components/projects-page/projects-page";
 import { getCollection } from "astro:content";
-import { cn } from "@/lib/utils";
 
 // Fetch all projects from the content collection
-const allProjects = await getCollection("projects");
+const allProjectsCollection = await getCollection("projects");
 
-// Transform projects to match the Project interface
-const projectsData = allProjects.map((project) => ({
+// Transform projects and ASSERT types to match the strict React Interface
+const projectsData = allProjectsCollection.map((project) => ({
   id: project.id,
   slug: project.data.slug,
   name: project.data.title,
   description: project.data.description,
   longDescription: project.data.longDescription,
-  status: project.data.status,
-  tags: project.data.tags,
+  // We use "as" here because Zod sees these as general strings,
+  // but React needs them as the specific Union Types
+  status: project.data.status as ProjectStatus[],
+  tags: project.data.tags as ProjectTag[],
   image: project.data.image,
   images: project.data.images,
   video: project.data.video,
@@ -27,25 +32,21 @@ const projectsData = allProjects.map((project) => ({
 
 <Layout title="Projects | M. Anjasfedo Afridiansah">
   <div
-    class="relative min-h-screen w-full flex items-center justify-center bg-white dark:bg-neutral-950 transition-colors duration-300 overflow-hidden"
+    class="relative min-h-screen w-full flex flex-col items-center bg-white dark:bg-neutral-950 transition-colors duration-300 overflow-hidden"
   >
-    {/* Dotted Background */}
+    {/* Grid Background */}
     <div
-      className={cn(
-        "absolute inset-0",
-        "[background-size:40px_40px]",
-        "[background-image:linear-gradient(to_right,#e4e4e7_1px,transparent_1px),linear-gradient(to_bottom,#e4e4e7_1px,transparent_1px)]",
-        "dark:[background-image:linear-gradient(to_right,#262626_1px,transparent_1px),linear-gradient(to_bottom,#262626_1px,transparent_1px)]"
-      )}
+      class="absolute inset-0 [background-size:40px_40px] [background-image:linear-gradient(to_right,#e4e4e7_1px,transparent_1px),linear-gradient(to_bottom,#e4e4e7_1px,transparent_1px)] dark:[background-image:linear-gradient(to_right,#262626_1px,transparent_1px),linear-gradient(to_bottom,#262626_1px,transparent_1px)]"
     >
     </div>
-    {/* Radial gradient for the container to give a faded look */}
+
+    {/* Radial Mask */}
     <div
       class="pointer-events-none absolute inset-0 flex items-center justify-center bg-white [mask-image:radial-gradient(ellipse_at_center,transparent_20%,black)] dark:bg-neutral-950 transition-colors duration-300"
     >
     </div>
 
-    <div class="relative z-10 w-full">
+    <div class="relative z-10 w-full pt-20">
       <ProjectsPage client:load projects={projectsData} />
     </div>
   </div>
