feat: timeline content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,8 @@ const content = indexEntries[0].data;
     <ExperienceTimeline
       client:visible
       content={{
+        
+        experienceTitle: content.experienceTitle,
         timeline: content.timeline,
       }}
     />
