--- a/src/pages/[lang]/certificates.astro
+++ b/src/pages/[lang]/certificates.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { CertificatesPage } from "../components/certificates-page/certificates-page";
-import type { CertificateSkill } from "../components/certificates-page/certificates-page";
+import Layout from "../../layouts/Layout.astro";
+import { CertificatesPage } from "../../components/certificates-page/certificates-page";
+import type { CertificateSkill } from "../../components/certificates-page/certificates-page";
 import { getCollection } from "astro:content";
 
 // Fetch all certificates from the content collection
