--- a/src/pages/[lang]/privacy.astro
+++ b/src/pages/[lang]/privacy.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { PrivacyPage } from "../components/privacy-page/privacy-page";
+import Layout from "../../layouts/Layout.astro";
+import { PrivacyPage } from "../../components/privacy-page/privacy-page";
 import { getCollection } from "astro:content";
 
 // Fetch the privacy page content
