--- a/src/pages/[lang]/terms.astro
+++ b/src/pages/[lang]/terms.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { TermsPage } from "../components/terms-page/terms-page";
+import Layout from "../../layouts/Layout.astro";
+import { TermsPage } from "../../components/terms-page/terms-page";
 import { getCollection } from "astro:content";
 
 // Fetch the terms page content
