--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,63 +1,1 @@
----
-import Layout from "../layouts/Layout.astro";
-import { Hero } from "../components/index-page/hero";
-import { IdentityGrid } from "../components/index-page/identity-grid";
-import { ExperienceTimeline } from "../components/index-page/experience-timeline";
-import { ServicesSection } from "../components/index-page/services-section";
-import { getCollection } from "astro:content";
-
-// 1. Fetch the collection
-const indexEntries = await getCollection("indexPage");
-
-// 2. Safely check if we have data
-if (indexEntries.length === 0) {
-  throw new Error(
-    "Could not find index.mdx in src/content/index-page/. Check your file path and pattern."
-  );
-}
-
-const content = indexEntries[0].data;
----
-
-<Layout>
-  <Hero
-    client:load
-    content={{
-      roles: content.roles,
-      headline: content.headline,
-    }}
-  />
-
-  <IdentityGrid
-    client:visible
-    content={{
-      education: content.education,
-      techStack: content.techStack,
-      location: content.location,
-      connect: content.connect,
-      interests: content.interests,
-    }}
-  />
-
-  <div id="experience">
-    <ExperienceTimeline
-      client:visible
-      content={{
-        experienceTitle: content.experienceTitle,
-        experienceDescription: content.experienceDescription,
-        timeline: content.timeline,
-      }}
-    />
-  </div>
-
-  <div id="services">
-    <ServicesSection
-      client:visible
-      content={{
-        servicesTitle: content.servicesTitle,
-        servicesDescription: content.servicesDescription,
-        services: content.services,
-      }}
-    />
-  </div>
-</Layout>
+<meta http-equiv="refresh" content="0;url=/en/" />
