--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { ProjectsPage } from "../components/projects-page/projects-page";
+import Layout from "../../layouts/Layout.astro";
+import { ProjectsPage } from "../../components/projects-page/projects-page";
 import type {
   ProjectStatus,
   ProjectTag,
-} from "../components/projects-page/projects-page";
+} from "../../components/projects-page/projects-page";
 import { getCollection } from "astro:content";
 
 // Fetch all projects from the content collection
