--- a/src/pages/[lang]/uses.astro
+++ b/src/pages/[lang]/uses.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { UsesPage } from "../components/uses-page/uses-page";
+import Layout from "../../layouts/Layout.astro";
+import { UsesPage } from "../../components/uses-page/uses-page";
 import { getCollection } from "astro:content";
 
 // Fetch the uses page content
