--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,8 +40,8 @@ const content = indexEntries[0].data;
     <ExperienceTimeline
       client:visible
       content={{
-        
         experienceTitle: content.experienceTitle,
+        experienceDescription: content.experienceDescription,
         timeline: content.timeline,
       }}
     />
@@ -51,6 +51,8 @@ const content = indexEntries[0].data;
     <ServicesSection
       client:visible
       content={{
+        servicesTitle: content.servicesTitle,
+        servicesDescription: content.servicesDescription,
         services: content.services,
       }}
     />
