feat: load identity from mdx

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,9 @@ const content = indexEntries[0].data;
     content={{
       education: content.education,
       techStack: content.techStack,
+      location: content.location,
+      connect: content.connect,
+      interests: content.interests,
     }}
   />
 
