--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,8 +1,21 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { TermsPage } from "../components/terms-page/terms-page";
+import { getCollection } from "astro:content";
+
+// Fetch the terms page content
+const termsEntries = await getCollection("termsPage");
+
+// Safely check if we have data
+if (termsEntries.length === 0) {
+  throw new Error(
+    "Could not find index.mdx in src/content/terms-page/. Check your file path and pattern."
+  );
+}
+
+const content = termsEntries[0].data;
 ---
 
 <Layout title="Terms of Service | M. Anjasfedo Afridiansah">
-  <TermsPage client:load />
+  <TermsPage client:load content={content} />
 </Layout>
