feat: complete index lang

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -123,6 +123,6 @@ const navigationItems = [
 
     <slot />
 
-    <Footer client:visible />
+    <Footer client:visible lang={lang} />
   </body>
 </html>
