--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,16 +33,16 @@ const navigationItems = [
     icon: "IconAward",
     href: `/${lang}/certificates`,
   },
-  {
-    title: t("nav.experience"),
-    icon: "IconBriefcase",
-    href: `/${lang}/#experience`,
-  },
-  {
-    title: t("nav.services"),
-    icon: "IconTerminal2",
-    href: `/${lang}/#services`,
-  },
+  // {
+  //   title: t("nav.experience"),
+  //   icon: "IconBriefcase",
+  //   href: `/${lang}/#experience`,
+  // },
+  // {
+  //   title: t("nav.services"),
+  //   icon: "IconTerminal2",
+  //   href: `/${lang}/#services`,
+  // },
   {
     title: t("nav.uses"),
     icon: "IconDeviceDesktop",
